--- a/patientor-backend/package.json
+++ b/patientor-backend/package.json
@@ -16,9 +16,11 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
+    "cors": "^2.8.5",
     "eslint": "^7.14.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
